responsive layout for desktop

--- a/src/index.pug
+++ b/src/index.pug
@@ -51,9 +51,12 @@ html(lang="ru")
 
               .hero__greeting-block-wrapper
                 h1.hero__greeting-block
-                  span.hero__greeting-text Личный сайт
-                  span.hero__greeting-text веб-разработчика
-                  span.title.title--hero Платон Ясев
+                  .hero__greeting-desc
+                    span.hero__greeting-text Личный сайт
+                    span.hero__greeting-text веб-разработчика
+                  .hero__greeting-name
+                    span.title.title--hero.title--hero-name Платон 
+                    span.title.title--hero.title--hero-surname Ясев
 
               .hero__btns-block
                 a(href="#personal-info").scroll
