--- a/src/styles/blocks/title.pcss
+++ b/src/styles/blocks/title.pcss
@@ -1,11 +1,15 @@
 .title {
-
   font-size: 36px;
   font-weight: bold;
 
   &--hero {
     font-size: 72px;
     font-weight: 800;
+    display: inline;
+
+    @include desktop {
+      display: block;
+    }
   }
 
   &--personal-info {
