--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -17,6 +17,20 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+
+  @include desktop {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+}
+
+.hero__greeting-desc {
+
+  @include desktop {
+    text-align: right;
+    margin-right: 40px;
+  }
+
 }
 
 .hero__greeting-text {
@@ -25,6 +39,15 @@
   font-weight: 600;
   line-height: 1.67;
   display: block;
+}
+
+.hero__greeting-name {
+
+  @include desktop {
+    line-height: .8;
+    text-align: left;
+  }
+
 }
 
 .hero__btns-block {
