--- a/src/styles/blocks/personal-info.pcss
+++ b/src/styles/blocks/personal-info.pcss
@@ -32,6 +32,10 @@
     width: 40%;
     margin-right: 2%;
   }
+
+  @include tablets {
+    margin-right: 4%;
+  }
 }
 
 .personal-info__image-wrapper {
@@ -64,6 +68,10 @@
   width: 50%;
   color: rgba(65, 76, 99, 0.5);
   line-height: 1.88;
+
+  @include tablets {
+    width: 60%;
+  }
 }
 
 .personal-info__title {
