--- a/src/index.pug
+++ b/src/index.pug
@@ -111,9 +111,10 @@ html(lang="ru")
                 h2.title.title--skills.skills__title Чем я могу быть полезен вам
                 .skills__content
                   .skills__content-charts
-                    span.skills__desc Этот сайт я сделал в рамках обучения в Школе онлайн образования
-                    span.skills__desc LoftSchool. Чуть позже я освежу в нём свой контент.
-                    span.skills__desc А пока посмотрите, как тут всё классно и красиво!
+                    .skills__desc-block
+                      span.skills__desc Этот сайт я сделал в рамках обучения в Школе онлайн образования
+                      span.skills__desc LoftSchool. Чуть позже я освежу в нём свой контент.
+                      span.skills__desc А пока посмотрите, как тут всё классно и красиво!
                     ul.skills__stack-list
                       each stackRow in stackItems
                         li.stack.skills__stack-item
@@ -265,7 +266,7 @@ html(lang="ru")
                 span.copyright__desc веб-разработчика
           .footer__content
             .footer__nav
-              nav.nav
+              .nav
                 ul.nav__list
                   each item, index in navItems
                     li.nav__item
