--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -33,6 +33,10 @@
   @include desktop {
     margin-bottom: 7%;
   }
+
+  @include tablets {
+    margin-bottom: 2%;
+  }
 }
 
 .footer__content-data {
@@ -40,16 +44,40 @@
   justify-content: space-between;
   color: rgba(255, 255, 255, 0.3);
   line-height: 1.88;
+
+  @include tablets {
+    flex-direction: column;
+  }
 }
 
 .footer__about-me {
   width: 40%;
+
+  @include tablets {
+    width: 100%;
+  }
 }
 
 .footer__text {
   margin-bottom: 5%;
+
+  @include tablets {
+    margin-bottom: 2%;
+  }
+}
+
+.footer__socials {
+
+  @include tablets {
+    margin-bottom: 10%;
+  }
+
 }
 
 .footer__quote {
-  width: 50%;
+
+  @include tablets {
+    width: 100%;
+  }
+
 }
