--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -3,6 +3,10 @@
   align-items: center;
   width: 100%;
   height: 8%;
+
+  @include tablets {
+    justify-content: space-between;
+  }
 }
 
 .header__col {
@@ -16,6 +20,10 @@
     flex: 1;
     justify-content: center;
     padding: 0 20px;
+
+    @include tablets {
+      display: none;
+    }
   }
 
   &--right {
