--- a/src/styles/blocks/hero.pcss
+++ b/src/styles/blocks/hero.pcss
@@ -22,6 +22,11 @@
     flex-direction: row;
     align-items: flex-start;
   }
+
+  @include tablets {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .hero__greeting-desc {
@@ -29,6 +34,12 @@
   @include desktop {
     text-align: right;
     margin-right: 40px;
+  }
+
+  @include tablets {
+    text-align: center;
+    margin-right: 0;
+    margin-bottom: 10%;
   }
 
 }
@@ -39,6 +50,11 @@
   font-weight: 600;
   line-height: 1.67;
   display: block;
+
+  @include tablets {
+    font-size: 16px;
+    line-height: 1.88;
+  }
 }
 
 .hero__greeting-name {
@@ -46,6 +62,11 @@
   @include desktop {
     line-height: .8;
     text-align: left;
+  }
+
+  @include tablets {
+    line-height: 1;
+    text-align: center;
   }
 
 }
