--- a/src/styles/blocks/nav.pcss
+++ b/src/styles/blocks/nav.pcss
@@ -1,13 +1,20 @@
 .nav__list {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .nav__item {
   white-space: nowrap;
+  margin-right: 60px;
 
-  &:not(:last-child) {
-    margin-right: 60px;
+  &:last-child {
+    margin-right: 0;
+  }
+
+  @include tablets {
+    margin-bottom: 25px;
+    margin-right: 13%;
   }
 }
 
