--- a/src/styles/blocks/nav.pcss
+++ b/src/styles/blocks/nav.pcss
@@ -16,6 +16,10 @@
     margin-bottom: 25px;
     margin-right: 13%;
   }
+
+  @include mini-phones {
+    margin-right: 25%;
+  }
 }
 
 .nav__link {
