--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -93,6 +93,11 @@ cite {
   position: relative;
   display: flex;
   flex-direction: column;
+  min-width: 320px;
+
+  @include mini-phones {
+    overflow-x: auto;
+  }
 }
 
 .container {
