--- a/src/styles/blocks/contacts.pcss
+++ b/src/styles/blocks/contacts.pcss
@@ -4,6 +4,10 @@
 
 .contacts__title {
   margin-bottom: 5%;
+
+  @include mini-phones {
+    margin-bottom: 15%;
+  }
 }
 
 .contacts__content {
@@ -29,14 +33,16 @@
 
   &--last {
     margin-bottom: 12%;
+
+    @include mini-phones {
+      margin-bottom: 20%;
+    }
   }
 
   &--submit {
-
     @include tablets {
       justify-content: center;
     }
-
   }
 }
 
@@ -46,6 +52,17 @@
 
   &:last-child {
     margin-right: 0;
+  }
+
+  @include mini-phones {
+    width: 100%;
+    flex: unset;
+    margin-right: 0;
+    margin-bottom: 50px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -75,7 +92,7 @@
       left: 0;
       background: svg-load(
           "message.svg",
-          fill=rgba($text-color, .3),
+          fill=rgba($text-color, 0.3),
           width=100%,
           height=100%
         )
@@ -120,6 +137,10 @@
   font-size: 18px;
   font-weight: bold;
   padding-left: 30px;
+
+  @include mini-phones {
+    height: 3.5em;
+  }
 }
 
 .contacts__form-sumbit-btn {
@@ -132,9 +153,13 @@
   border-radius: 5px;
   border-top-left-radius: 30px;
   border-bottom-right-radius: 30px;
-  transition: opacity .3s;
+  transition: opacity 0.3s;
 
   &:hover {
-    opacity: .8;
+    opacity: 0.8;
+  }
+
+  @include mini-phones {
+    padding: 10% 30%;
   }
 }
