--- a/src/styles/blocks/review.pcss
+++ b/src/styles/blocks/review.pcss
@@ -10,6 +10,10 @@
     background: svg-load('quote.svg', fill=rgba($text-color, 0.05), width=100%, height=100%) center center no-repeat;
     flex-shrink: 0;
     margin-right: 2%;
+
+    @include mini-phones {
+      display: none;
+    }
   }
 }
 
