--- a/src/styles/blocks/triangles-reviews-contacts.pcss
+++ b/src/styles/blocks/triangles-reviews-contacts.pcss
@@ -3,7 +3,7 @@
   position: relative;
   margin-bottom: -80px;
 
-  @include mini-phones {
+  @include phones {
     height: 50px;
     margin-bottom: -50px;
   }
