--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -4,13 +4,15 @@
   width: 100%;
   height: 8%;
 
-  @include tablets {
+  @include big-tablets {
     justify-content: space-between;
+    height: 12%;
   }
 }
 
 .header__col {
   display: flex;
+  align-items: center;
 
   &--left {
     justify-content: flex-start;
@@ -21,7 +23,7 @@
     justify-content: center;
     padding: 0 20px;
 
-    @include tablets {
+    @include big-tablets {
       display: none;
     }
   }
@@ -30,8 +32,15 @@
     justify-content: flex-end;
 
 
-    @include mini-phones {
+    @include phones {
       display: none;
+    }
+  }
+
+  &--hamburger {
+
+    @include big-tablets {
+      padding-left: 100px;
     }
   }
 }
