--- a/src/styles/blocks/personal-info.pcss
+++ b/src/styles/blocks/personal-info.pcss
@@ -1,7 +1,7 @@
 .personal-info {
   padding: 15% 0;
 
-  @include mini-phones {
+  @include phones {
     padding: 25% 0;
   }
 }
@@ -25,7 +25,7 @@
   display: flex;
   align-items: center;
 
-  @include mini-phones {
+  @include phones {
     flex-direction: column;
   }
 }
@@ -45,7 +45,7 @@
     margin-right: 4%;
   }
 
-  @include mini-phones {
+  @include phones {
     width: 100%;
     margin-right: 0;
     margin-bottom: 15%;
@@ -71,6 +71,10 @@
     font-weight: 600;
     color: rgba(65, 76, 99, 0.3);
     padding-right: 50px;
+
+    @include mini-tablets {
+      padding-right: 20px;
+    }
   }
 
   &--content {
@@ -87,7 +91,7 @@
     width: 60%;
   }
 
-  @include mini-phones {
+  @include phones {
     width: 100%;
   }
 }
