--- a/src/styles/blocks/title.pcss
+++ b/src/styles/blocks/title.pcss
@@ -40,7 +40,7 @@
       font-size: 25px;
     }
 
-    @include mini-phones {
+    @include phones {
       text-align: left;
     }
   }
@@ -48,7 +48,7 @@
   &--works {
     
 
-    @include mini-phones {
+    @include phones {
       text-align: center;
     }
   }
@@ -56,7 +56,7 @@
   &--reviews {
     margin-right: 30px;
 
-    @include mini-phones {
+    @include phones {
       margin-right: 0;
       margin-bottom: 10%;
       text-align: center;
