--- a/src/styles/blocks/triangles-greeting.pcss
+++ b/src/styles/blocks/triangles-greeting.pcss
@@ -3,7 +3,7 @@
   height: 80px;
   margin-top: -80px;
 
-  @include mini-phones {
+  @include phones {
     height: 50px;
     margin-top: -50px;
   }
