--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -2,11 +2,11 @@
   padding: 5% 0;
   padding-right: 2%;
 
-  @include tablets {
+  @include big-tablets {
     padding-right: 0;
   }
 
-  @include mini-phones {
+  @include phones {
     margin: 0;
     width: 100%;
     padding-bottom: 15%;
@@ -20,7 +20,7 @@
 .works__slider-item {
   display: flex;
 
-  @include tablets {
+  @include big-tablets {
     flex-direction: column;
   }
 }
@@ -31,6 +31,7 @@
   flex-direction: column;
   align-items: flex-end;
   position: relative;
+  min-width: 320px;
 
   &::before {
     content: "1";
@@ -42,27 +43,37 @@
     font-weight: 800;
     color: rgba(65, 76, 99, 0.05);
     z-index: -1;
-    line-height: 1;
+    line-height: 0.7;
 
     @include desktop {
       right: -23%;
     }
 
-    @include mini-phones {
-      display: none;
+    @include mini-desktop {
+      font-size: 300px;
     }
 
+    @include big-tablets {
+      font-size: 400px;
+    }
+
+    @include phones {
+      display: none;
+    }
   }
 
-  @include tablets {
+  @include big-tablets {
     width: 90%;
     margin-bottom: 10%;
   }
 
-  @include mini-phones {
+  @include phones {
     width: 100%;
   }
 
+  @include mini-phones {
+    overflow-x: auto;
+  }
 }
 
 .works__preview-img-wrapper {
@@ -77,14 +88,14 @@
   height: 90%;
   box-shadow: -30px 0px 50px -10px rgba(0, 0, 0, 0.5);
 
-  @include mini-phones {
+  @include phones {
     display: none;
   }
 }
 
 .works__preview-item {
   height: 20%;
-  transition: transform .3s;
+  transition: transform 0.3s;
 
   &--active {
     border: 2px solid #f29400;
@@ -116,14 +127,14 @@
   width: 40%;
   padding-left: 10%;
 
-  @include tablets {
+  @include big-tablets {
     width: 75%;
     align-self: center;
     text-align: center;
     padding: 0;
   }
 
-  @include mini-phones {
+  @include phones {
     width: 85%;
     text-align: left;
   }
@@ -135,6 +146,7 @@
 
 .works__tech-item {
   margin-right: 5px;
+  margin-bottom: 5px;
 
   &:last-child {
     margin-right: 0;
@@ -151,7 +163,7 @@
     font-size: 25px;
   }
 
-  @include mini-phones {
+  @include phones {
     font-size: 22px;
   }
 }
@@ -181,11 +193,11 @@
     margin-right: 5%;
   }
 
-  @include tablets {
+  @include big-tablets {
     justify-content: center;
   }
 
-  @include mini-phones {
+  @include phones {
     justify-content: flex-start;
   }
 
@@ -194,26 +206,20 @@
   }
 
   &:focus {
-
     color: #000;
-
 
     &:before {
       background: svg-load("link.svg", fill=#000, width=100%, height=100%)
-      center center no-repeat;
+        center center no-repeat;
     }
-
   }
 
   &:active {
-
     color: red;
 
-
     &:before {
-      background: svg-load("link.svg", fill=red, width=100%, height=100%)
-      center center no-repeat;
+      background: svg-load("link.svg", fill=red, width=100%, height=100%) center
+        center no-repeat;
     }
-
   }
 }
