--- a/src/styles/blocks/greeting.pcss
+++ b/src/styles/blocks/greeting.pcss
@@ -1,4 +1,4 @@
-.greeting {
+/* .greeting {
   background: url('../images/bg/mountain-baloon.jpg') center center no-repeat;
   background-size: cover;
-}
+} */
